--- a/Trabalho Pratico.vcxproj.filters
+++ b/Trabalho Pratico.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Operations.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Machines.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dados.h">
@@ -32,5 +35,8 @@
     <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
