--- a/Trabalho Pratico.vcxproj.filters
+++ b/Trabalho Pratico.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Machines.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="gestaodedados.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dados.h">
