--- a/Trabalho Pratico.vcxproj
+++ b/Trabalho Pratico.vcxproj
@@ -139,7 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="gestaodedados.c" />
+    <ClCompile Include="armazenamentodados.c" />
+    <ClCompile Include="gestor.c" />
     <ClCompile Include="Jobs.c" />
     <ClCompile Include="Machines.c" />
     <ClCompile Include="main.c">
@@ -149,7 +150,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dados.h" />
-    <ClInclude Include="functions.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
